--- a/RAG_local/contextual_compression/requirements.txt
+++ b/RAG_local/contextual_compression/requirements.txt
@@ -1,4 +1,4 @@
-pinecone-client==2.2.4
-openai==1.3.0
+pinecone-client>=2.2.1
+openai>=1.0.0
 python-dotenv==1.0.0
-tiktoken==0.5.1
+#tiktoken==0.5.1
