--- a/RAG_local/parent_document/requirements.txt
+++ b/RAG_local/parent_document/requirements.txt
@@ -1,5 +1,4 @@
-
-openai==1.3.0
-pinecone-client==2.2.4
-sentence-transformers==2.2.2
-python-dotenv==1.0.0
+openai>=0.27.0
+pinecone-client>=2.2.1
+tiktoken>=0.3.3
+numpy>=1.21.6
